Use generate_204 for connectivity checks and remove obsolete URL comments